@@ -54,9 +54,11 @@ AC_SUBST([OPENDNSSEC_FETCH_PIDFILE])
 OPENDNSSEC_SIGNER_SOCKET=$OPENDNSSEC_PID_DIR/engine.sock
 OPENDNSSEC_SIGNER_ENGINE=$OPENDNSSEC_SBIN_DIR/ods-signerd
 OPENDNSSEC_SIGNER_CLI=$OPENDNSSEC_SBIN_DIR/ods-signer
+OPENDNSSEC_SIGNER_WORKINGDIR=$OPENDNSSEC_STATE_DIR/tmp
 
 AC_SUBST([OPENDNSSEC_SIGNER_SOCKET])
 AC_SUBST([OPENDNSSEC_SIGNER_ENGINE])
 AC_SUBST([OPENDNSSEC_SIGNER_CLI])
+AC_SUBST([OPENDNSSEC_SIGNER_WORKINGDIR])
 
 ])
